--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'PT Serif', serif;
     font-size: 14px;
     line-height: 1.6;
     margin: 20px;
@@ -17,8 +17,11 @@ body {
 }
 
 .title {
-    border: 0.05rem solid;
+    border-radius: auto;
+    width: 100%;
+    border: 1px gray solid;
     background-color: rgb(207, 212, 216);
+    box-shadow: 9px 9px 11px gray;
 }
 
 hr {
@@ -36,13 +39,15 @@ button {
 }
 
 input {
-    display: inline-block;
     width: 100%;
+    display: inline-block;
+    flex-direction: row;
+   
 }
 
 label {
+    width: 100%;
     margin-top: 20px;
-
     display: inline-block;
     text-align: left;
 }
@@ -51,19 +56,23 @@ label {
     display: none;
     text-align: left;
     width: 100%;
+    margin: auto;
 }
 
 #search {
+    border: lime;
     margin-top: 20px;
-    width: 20%;
+    width: 50%;
     font-size: 15px;
 }
 
 #cancel {
+    border: lime;
     font-size: 15px;
-    width: 20%;
+    width: 50%;
     display: inline-block;
     margin-top: 20px;
     background-color: rgb(219, 61, 61);
 
 }
+
