--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family:'PT Serif', serif;
+    font-family: 'PT Serif', serif;
     font-size: 14px;
     line-height: 1.6;
     margin: 20px;
@@ -61,28 +61,49 @@ label {
 #search {
     border: lime;
     margin-top: 20px;
-    width: 50%;
+    width: 150px;
+    height: 40px;
     font-size: 15px;
 }
 
 #cancel {
     border: lime;
     font-size: 15px;
-    width: 50%;
+    width: 150px;
+    height: 40px;
     display: inline-block;
     margin-top: 20px;
     background-color: rgb(219, 61, 61);
 
 }
 
-#result{
+#result {
     display: none;
-    border: solid 2px;
+
+    
 }
 
-#card{
-    border:solid 3px;
-    display: inline-block;
-    background-color: rgb(219, 61, 61);
+#rcherche {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
 }
 
+#box {
+    display: flex;
+    flex-wrap: wrap;
+    height: 10%;
+    
+   
+    }
+
+    #container{
+        padding: 10px;
+        float:left;
+        border:solid 1px black;
+        width:44%;
+        height: 350px;
+        margin: 5px;
+        text-align: justify;
+        overflow: auto;
+    }
