--- a/sass/style.css
+++ b/sass/style.css
@@ -1,18 +1,21 @@
 body {
-  font-family: "PT Serif", serif;
+  font-family: 'PT Serif', serif;
   font-size: 14px;
   margin: 20px;
   padding: 20px;
   background-color: whitesmoke;
 }
+
 body * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
 body *#myBooks {
   text-align: center;
   width: 100%;
 }
+
 body *#myBooks .title {
   border-radius: auto;
   width: 100%;
@@ -21,9 +24,11 @@ body *#myBooks .title {
   -webkit-box-shadow: 9px 9px 11px gray;
           box-shadow: 9px 9px 11px gray;
 }
+
 body *#myBooks hr {
   margin-top: 20px;
 }
+
 body *#myBooks button {
   background-color: #2d9281;
   color: #eee2e2;
@@ -33,18 +38,21 @@ body *#myBooks button {
   padding-right: 0.8rem;
   padding-left: 0.8rem;
 }
+
 body *#myBooks #newBook {
   display: none;
   text-align: left;
   width: 100%;
   margin: auto;
 }
+
 body *#myBooks #newBook label {
   width: 100%;
   margin-top: 20px;
   display: inline-block;
   text-align: left;
 }
+
 body *#myBooks #newBook label input {
   display: block;
   -webkit-box-orient: horizontal;
@@ -53,6 +61,7 @@ body *#myBooks #newBook label input {
           flex-direction: row;
   width: 100%;
 }
+
 body *#myBooks #newBook #search {
   color: white;
   border: lime;
@@ -61,6 +70,7 @@ body *#myBooks #newBook #search {
   height: 40px;
   font-size: 15px;
 }
+
 body *#myBooks #newBook #cancel {
   color: white;
   border: lime;
@@ -71,9 +81,11 @@ body *#myBooks #newBook #cancel {
   margin-top: 20px;
   background-color: #db3d3d;
 }
+
 body #result {
   display: none;
 }
+
 body #box {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -82,11 +94,13 @@ body #box {
       flex-wrap: wrap;
   height: 10%;
 }
+
 body #rcherche {
   text-align: center;
   font-size: 20px;
   font-weight: bold;
 }
+
 body #container {
   padding: 10px;
   float: left;
@@ -96,5 +110,11 @@ body #container {
   margin: 5px;
   text-align: justify;
   overflow: auto;
+}
+
+body #container #bmark {
+  float: right;
+  font-size: 30px;
+  color: #2d9281;
 }
 /*# sourceMappingURL=style.css.map */
