--- a/css/style.css
+++ b/css/style.css
@@ -1,108 +1,132 @@
+.container {
+  padding: 10px;
+  float: left;
+  border: solid 2px black;
+  border-radius: 17px;
+  width: 44%;
+  height: 300pt;
+  margin: 5px;
+  text-align: justify;
+  overflow: auto; }
+
 body {
   font-family: 'PT Serif', serif;
   font-size: 14px;
   margin: 20px;
   padding: 20px;
-  background-color: whitesmoke; }
-  body * {
-    box-sizing: border-box; }
-  body img {
-    text-align: center;
-    max-width: 200px;
-    max-height: 200px; }
-  body #myBooks {
-    text-align: center;
-    width: 100%; }
-    body #myBooks .title {
+  background-color: whitesmoke;
+  box-sizing: border-box; }
+
+img {
+  margin-left: 30%;
+  max-width: 200px;
+  max-height: 200px; }
+
+#myBooks {
+  text-align: center;
+  width: 100%; }
+  #myBooks .title {
+    width: 100%;
+    border: 1px gray solid;
+    background-color: #cfd4d8;
+    box-shadow: 9px 9px 11px gray; }
+  #myBooks hr {
+    margin-top: 20px; }
+  #myBooks button {
+    background-color: #2d9281;
+    color: #eee2e2;
+    font-size: 1.2rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
+    padding-right: 0.8rem;
+    padding-left: 0.8rem; }
+  #myBooks #newBook {
+    display: none;
+    text-align: left;
+    width: 100%;
+    margin: auto; }
+    #myBooks #newBook label {
       width: 100%;
-      border: 1px gray solid;
-      background-color: #cfd4d8;
-      box-shadow: 9px 9px 11px gray; }
-    body #myBooks hr {
-      margin-top: 20px; }
-    body #myBooks button {
-      background-color: #2d9281;
-      color: #eee2e2;
-      font-size: 1.2rem;
-      padding-top: 0.3rem;
-      padding-bottom: 0.3rem;
-      padding-right: 0.8rem;
-      padding-left: 0.8rem; }
-    body #myBooks #newBook {
-      display: none;
-      text-align: left;
-      width: 100%;
-      margin: auto; }
-      body #myBooks #newBook label {
-        width: 100%;
-        margin-top: 20px;
-        display: inline-block;
-        text-align: left; }
-        body #myBooks #newBook label input {
-          display: block;
-          flex-direction: row;
-          width: 100%; }
-      body #myBooks #newBook #search {
-        color: white;
-        border: lime;
-        margin-top: 20px;
-        width: 150px;
-        height: 40px;
-        font-size: 15px; }
-      body #myBooks #newBook #cancel {
-        color: white;
-        border: lime;
-        font-size: 15px;
-        width: 150px;
-        height: 40px;
-        display: inline-block;
-        margin-top: 20px;
-        background-color: #db3d3d; }
-  body #result {
-    justify-content: center;
-    display: none; }
-  body #box {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around; }
-  body #rcherche {
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold; }
-  body #container {
-    background: blue; }
-  body .container {
-    padding: 10px;
-    float: left;
-    border: solid 2px black;
-    border-radius: 17px;
-    width: 44%;
-    height: 300pt;
-    margin: 5px;
-    text-align: justify;
-    overflow: auto; }
-    body .container #bmark {
-      float: right;
-      font-size: 30px;
-      color: #2d9281; }
-    body .container .fa-bookmark:hover {
-      color: #197003; }
-    body .container #kmark.pointer {
-      cursor: pointer; }
-    body .container #bmarkpl {
-      float: right;
-      font-size: 30px;
-      color: #2d9281; }
+      margin-top: 20px;
+      display: inline-block;
+      text-align: left; }
+      #myBooks #newBook label input {
+        display: block;
+        flex-direction: row;
+        width: 100%; }
+    #myBooks #newBook #search {
+      color: white;
+      border: lime;
+      margin-top: 20px;
+      width: 150px;
+      height: 40px;
+      font-size: 15px; }
+    #myBooks #newBook #cancel {
+      color: white;
+      border: lime;
+      font-size: 15px;
+      width: 150px;
+      height: 40px;
+      display: inline-block;
+      margin-top: 20px;
+      background-color: #db3d3d; }
+
+#result {
+  justify-content: center;
+  display: none; }
+
+#box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; }
+
+#rcherche {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold; }
+
+#container {
+  background: blue; }
+
+#bmark {
+  float: right;
+  font-size: 30px;
+  color: #2d9281; }
+
+.fa-bookmark:hover {
+  color: #197003; }
+
+#kmark.pointer {
+  cursor: pointer; }
+
+#bmarkpl {
+  float: right;
+  font-size: 30px;
+  color: #2d9281; }
 
 #pocheListe {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around; }
 
-/*@media screen and (min-width: 1000px){
-    #search {
-        display: none;
-    }
-}*/
+h2 {
+  text-align: center; }
+
+@media (max-width: 850px) {
+  .container {
+    width: 100%;
+    font-size: 15px; } }
+@media screen and (max-width: 650px) {
+  input {
+    height: 30px; } }
+@media screen and (max-width: 650px) {
+  label {
+    font-size: 20px; } }
+@media screen and (max-width: 650px) {
+  #search {
+    margin-left: 30%; } }
+@media screen and (max-width: 650px) {
+  #cancel {
+    margin-left: 30%; } }
 
 /*# sourceMappingURL=style.css.map */
